Iniziata zona di guerra